# scratch

./: README.md
cache/: cache.c  cache.h
downloader/: downloader.py
grived/src/: daemon.cc  grived.cc  grived.hh
hackerrank/: count_luck.cc  gridsearch.cc  input05_gridsearch  output05_gridsearch.webarchive
interviews/: README  atoi.c  bst_array.py  comptax.c  datadogmon.py  flip_str.py  majority.c  output000.txt  palindrome.c  permstr.py  robot.py  stack.py  testmon.sh  wmerge.py
interviews/exercises/: bst.py  comptax  comptax.c  comptax.c.orig  hanoi.c  input000.txt  mergesort.c  permstr_2.py  ptrparam  ptrparam.c
mkload/: CMakeLists.txt  mkload_v0_1_0.c
mkload/src/: CMakeLists.txt
